=================
Version 0.2 Alpha
=================

* Automatically scroll the result list in rubberband selection mode