@@ -3,3 +3,4 @@ Version 0.2 Alpha
 =================
 
 * Automatically scroll the result list in rubberband selection mode
+* Focus search entry when the main window gets activated
